# mosaic

./: Cargo.toml  README.md  Types.md
src/: capabilities.rs  funnels.rs  internals.rs  iterators.rs  layers.rs  lib.rs  querying.rs  transformers.rs
src/capabilities/: archetype.rs  collage.rs  dictionary.rs  grouping.rs  parenting.rs  process.rs  queue.rs  selection.rs  strings.rs  traversal.rs  tuple.rs  unit_tests.rs
src/depraceted/: brick_editor.rs  mosaic_tiles.rs
src/funnels/: parent_funnel.rs  string_funnel.rs  traversal_funnel.rs  unit_tests.rs
src/internals/: byte_utilities.rs  collage.rs  collage_impl.rs  component_grammar.pest  component_grammar.rs  component_registry.rs  datatypes.rs  either.rs  engine_state.rs  entity_registry.rs  freelist.rs  get_entities.rs  get_tiles.rs  interchange.rs  iterators.rs  lifecycle.rs  logging.rs  mosaic.rs  mosaic_engine.rs  mosaic_tiles.rs  query_iterator.rs  sparse_matrix.rs  sparse_set.rs  tile.rs  tile_access.rs  tile_iterator.rs  unit_tests.rs
src/iterators/: component_selectors.rs  deletion.rs  exclude_component.rs  exclude_components.rs  filter_arrows.rs  filter_descriptors.rs  filter_extensions.rs  filter_loops.rs  filter_objects.rs  filter_with_component.rs  get_arrows_from.rs  get_arrows_into.rs  get_dependent_tiles.rs  get_dependents.rs  get_descriptors.rs  get_extensions.rs  get_sources.rs  get_targets.rs  get_tile.rs  include_component.rs  include_components.rs  just_tile.rs  tile_deletion.rs  tile_filters.rs  tile_getters.rs  unit_tests.rs
src/layers/: accessing.rs  brick_editor.rs  family.rs  tiling.rs  (+7 more)
(+13 files in other folders)
