[package]
name = "mosaic"
version = "0.1.14"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
fstr = "^0.2.9"
pest = "2.7.0"
pest_derive = "2.7.0"
bit-set = "0.5.3"
array_tool = "1.0.3"
itertools = "0.11.0"
component = "0.1.0"
clippy = "0.0.302"
log = "0.4.20"
slab = "0.4.9"
atomic-counter = "1.0.1"
ordered-multimap = "0.7.1"
env_logger = "0.10.1"
anyhow = { version = "1.0.75", features = [ "backtrace" ] }
once_cell = "1.18.0"